Añadí un contador, la página Index, ahora redigirá a contador

--- a/otra-pagina.html
+++ b/otra-pagina.html
@@ -1,10 +1,17 @@
-<link rel="stylesheet" href="cont.css">
-
-<div class="canvas">
-    <div class="puddle" style="--x: 1.55em; --y: 3.73em">Roses are red</div>
-    <div class="puddle" style="--x: 1.5em; --y: 1.8em">Violets are blue</div>
-    <div class="puddle" style="--x: -1.5em; --y: -1.8em">Unexpected ";"</div>
-    <div class="puddle" style="--x: -1.3em; --y: -3.7em">On line 32</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+    <link rel="icon" href="./favicon/head.ico" type="image/x-icon">
+    <link rel="stylesheet" href="anime.css">
+  	<title>Feliz CUMpleaños</title>
+<body>
+  <div class="canvas">
+    <div class="puddle" style="--x: 1.55em; --y: 3.73em">Feliz CUMpleaños</div>
+    <div class="puddle" style="--x: 1.5em; --y: 1.8em">Mi ninia</div>
+    <div class="puddle" style="--x: -1.5em; --y: -1.8em">TwoStones</div>
+    <div class="puddle" style="--x: -1.3em; --y: -3.7em">uwu</div>
   </div>
-
-<script src="contador.js"></script>
+<script src="animacion.js"></script>
+</body>
+</head>
