--- a/contador.html
+++ b/contador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="./favicon/head.ico" type="image/x-icon">
     <link rel="stylesheet" href="reverso.css">
-    <title>Contador</title>
+    <title>Feliz CUM | Contador</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
