--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./favicon/head.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 
-	<title>Mi página web</title>
+	<title>Feliz CUM | Fecha de CUMpleaños</title>
 	<!-- CDN de Google para jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<!-- CDN de Google para jQuery UI -->
