--- a/otra-pagina.html
+++ b/otra-pagina.html
@@ -1,1 +1,17 @@
-ajsjdasjdj
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+    <link rel="icon" href="./favicon/head.ico" type="image/x-icon">
+    <link rel="stylesheet" href="anime.css">
+  	<title>Feliz CUMpleaños</title>
+<body>
+  <div class="canvas">
+    <div class="puddle" style="--x: 1.55em; --y: 3.73em">Feliz CUMpleaños</div>
+    <div class="puddle" style="--x: 1.5em; --y: 1.8em">Mi ninia</div>
+    <div class="puddle" style="--x: -1.5em; --y: -1.8em">TwoStones</div>
+    <div class="puddle" style="--x: -1.3em; --y: -3.7em">uwu</div>
+  </div>
+<script src="animacion.js"></script>
+</body>
+</head>
