--- a/index.html
+++ b/index.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <link rel="icon" href="./favicon/head.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-
-	<title>Feliz CUM | Fecha de CUMpleaños</title>
-	<!-- CDN de Google para jQuery -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<!-- CDN de Google para jQuery UI -->
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-	
-
+    <link rel="stylesheet" href="typing.css">
+    <title>Feliz CUM | Fecha de CUMpleaños</title>
+    <!-- CDN de Google para jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- CDN de Google para jQuery UI -->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 </head>
 <body>
-
-  <div id="contenedor-principal">
-    <h1>Fecha de Cumpleaños</h1>
-    <p>Hola! Por favor, introduce tu fecha de cumpleaños:</p>
-    <div id="contenedor-input">
-        <input type="text" id="calendario" style="display:none">
-        <div id="contenedor-botones">
-            <button onclick="abrirCalendario()">Abrir Calendario</button>
-            <button onclick="verificarFecha()">Entrar</button>
+    <div id="contenedor-principal">
+        <h1 class="typing-demo">Fecha de Cumpleaños</h1>
+        <p>Hola! Por favor, introduce tu fecha de cumpleaños:</p>
+        <div id="contenedor-input">
+            <input type="text" id="calendario" style="display:none">
+            <div id="contenedor-botones">
+                <button onclick="abrirCalendario()">Abrir Calendario</button>
+                <button onclick="verificarFecha()">Entrar</button>
+            </div>
         </div>
     </div>
-</div>
-
-	<!-- Archivo de script personalizado -->
-	<script src="scripts.js"></script>
-  
-  </div>
-	
+    <div class="bg-anim"></div> <!-- div para la animación de fondo -->
+    <script src="scripts.js"></script>
 </body>
 </html>
