--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="contenedor-principal">
         <h1 class="typing-demo">Fecha de Cumpleaños</h1>
-        <p>Hola! Por favor, introduce tu fecha de cumpleaños:</p>
+        <p>¡Hola wenas señorita! Por favor, introduzca su fecha de cumpleaños.:</p>
         <div id="contenedor-input">
             <input type="text" id="calendario" style="display:none">
             <div id="contenedor-botones">
