--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div id="contenedor-principal">
-        <h1 class="typing-demo">INTRODUCE TU FECHA DE CUMPLEAÑOS</h1>
-        <p id="estimada">Eshtimada señoritha es un gusto verla por aqui</p>
+        <h1 class="typing-demo">FECHA DE CUMPLEAÑOS</h1>
+        <p id="estimada">Eshtimada señoritha es un gusto verla por aqui...</p>
         <div id="contenedor-input">
             <input type="text" id="calendario" style="display:none">
             <div id="contenedor-botones">
