--- a/contador.html
+++ b/contador.html
@@ -7,6 +7,7 @@
     <title>Feliz CUM | Contador</title>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <div id="header">
@@ -48,6 +49,7 @@
 
     <div id="contador" class="container">
         <!-- contenido del contador -->
+        <p>- Habichuela con dulce</p>
     </div>
     
     <div id="text-container"></div>
