--- a/contador.html
+++ b/contador.html
@@ -57,7 +57,7 @@
           <div class="content-wrapper">
             <div class="content">
               <div class="page page1">
-                <h3 class="shion">SHION EL GUERRERO</h3>
+                <h3 class="shion">SHION, EL GUERRERO</h3>
                 <p>Shion era un joven guerrero japonés con una habilidad sin igual para la espada. Pero su vida dio un giro inesperado cuando fue comprado por una mujer en un mercado de esclavos.</p>
                 <p>A pesar de estar en cautiverio, Shion no perdió su espíritu valiente. Se ganó el respeto y la admiración de su dueña gracias a su lealtad y destreza en la batalla.</p>
               </div>
