--- a/contador.html
+++ b/contador.html
@@ -76,6 +76,8 @@
             </div>
           </div>
         </div>
+        <p id="deseo-pao">- Deseo algún día viajar a Japón, más expecíficamente poder estar en el distrito de Gion en Kioto.</p>
+        <p id="deseo-pao">- Deseo conseguir los 72 tomos del manga de Naruto y así completar la colección.</p>
       </div>
       <img src="./img/paog.png" alt="Personaje de Minecraft" class="esquina-izquierda-abajo" draggable="false">
 
