--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="./favicon/head.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="typing.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <title>Feliz CUM | Fecha de CUMpleaños</title>
     <!-- CDN de Google para jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -14,18 +17,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 </head>
 <body>
-    <div id="contenedor-principal">
-        <h1 class="typing-demo">FECHA DE CUMPLEAÑOS</h1>
-        <p id="estimada">Eshtimada señoritha es un gusto verla por aqui...</p>
-        <div id="contenedor-input">
-            <input type="text" id="calendario" style="display:none">
-            <div id="contenedor-botones">
-                <button onclick="abrirCalendario()">Abrir Calendario</button>
-                <button onclick="verificarFecha()">Entrar</button>
+    <div id="container">
+        <div class="container-border">
+            <div id="content">
+                <div class="typing typing-demo-container">
+                    <h1 class="typing-demo">Fecha de cumpleaños</h1>
+                  </div>
+                <p id="welcome">Eshtimada señoritha es un gusto verla por aqui...</p>
+                <div id="input-container">
+                    <input type="text" id="calendario" style="display:none">
+                    <div id="button-container">
+                        <button id="botones" onclick="abrirCalendario()">Selecciona ≧◉◡◉≦</button>
+                        <button id="botones" onclick="verificarFecha()">Ingresar</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="bg-anim"></div> <!-- div para la animación de fondo -->
     <script src="scripts.js"></script>
 </body>
 </html>
