Agregue burbujas a la pagina principal, y corregi algunos errores

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="./favicon/head.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="typing.css">
+    <link rel="stylesheet" href="burbujas.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
@@ -23,7 +24,7 @@
                 <div class="typing typing-demo-container">
                     <h1 class="typing-demo">Fecha de cumpleaños</h1>
                   </div>
-                <p id="welcome">Eshtimada señoritha es un gusto verla por aqui...</p>
+                <p id="welcome">Eshtimada señoritha es un gusto volver a verle por aquí...</p>
                 <div id="input-container">
                     <input type="text" id="calendario" style="display:none">
                     <div id="button-container">
@@ -34,6 +35,21 @@
             </div>
         </div>
     </div>
+        
+    <div class="burbujas">
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+    </div>
+
     <script src="scripts.js"></script>
+
 </body>
 </html>
