--- a/contador.html
+++ b/contador.html
@@ -78,7 +78,7 @@
         </div>
         <p id="deseo-pao">- Deseo algún día viajar a Japón, más expecíficamente poder estar en el distrito de Gion en Kioto.</p>
         <p id="deseo-pao">- Deseo conseguir los 72 tomos del manga de Naruto y así completar la colección.</p>
-        <p id="deseo-pao">- Deseo aprender lenguaje de señas.</p>
+        <p id="deseo-pao" onclick="redirectToSignLanguage()">- Deseo aprender lenguaje de señas. *Tocame, tose*</p>
       </div>
       <img src="./img/paog.png" alt="Personaje de Minecraft" class="esquina-izquierda-abajo" draggable="false">
 
