--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="typing.css">
     <link rel="stylesheet" href="burbujas.css">
+
+        <!--Fuentes De Google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <title>Feliz CUM | Fecha de CUMpleaños</title>
-    <!-- CDN de Google para jQuery -->
+        <!-- CDN de Google para jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- CDN de Google para jQuery UI -->
+        <!-- CDN de Google para jQuery UI -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+        <!--Son las alertas Sweet-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <title>Feliz CUM | Fecha de CUMpleaños</title>
+
 </head>
 <body>
     <div id="container">
@@ -24,7 +29,7 @@
                 <div class="typing typing-demo-container">
                     <h1 class="typing-demo">Fecha de cumpleaños</h1>
                   </div>
-                <p id="welcome">Eshtimada señoritha es un gusto volver a verle por aquí...</p>
+                <p id="welcome">Hm... Un poco cambiadito todo por aqui 7u7</p>
                 <div id="input-container">
                     <input type="text" id="calendario" style="display:none">
                     <div id="button-container">
