Agregué Sakura a la sección del Contador

--- a/contador.html
+++ b/contador.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <link rel="icon" href="./favicon/head.ico" type="image/x-icon">
     <link rel="stylesheet" href="reverso.css">
+    <link rel="stylesheet" href="./sakura/node_modules/sakura-js/dist/sakura.min.css">
     <title>Feliz CUM | Contador</title>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
+  
+
+  
     <div id="header">
         <h3>Inserta un deseo por día</h3>
       </div>
@@ -91,7 +95,12 @@
           <p>De mi, para ti.</p>
         </footer>
       </body>
-         
+
+    <script src="./sakura/node_modules/sakura-js/dist/sakura.min.js"></script>
+    <script>
+      var sakura = new Sakura('body');
+    </script>
+
     <script src="reversocalc.js"></script>
     <script src="deseos.js"></script>
 </body>
